--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="portrait.png" alt=""></td>
+      <td><img src="images/portrait.png" alt=""></td>
       <td>
         <h1>Ashwin Rajeswaran</h1>
         <p><em>UX designer and <strong>programmer</strong>.</em></p>
