--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   <hr>
   <h3>Education</h3>
   <ul>
-    <li>Informatikk: design, bruk og interaksjon (<em>UiO</em>)</li>
+    <li>Information: design, bruk og interaksjon (<em>UiO</em>)</li>
     <li>Studiespesialisering (<em>Elvebakken vgs</em>)</li>
   </ul>
   <hr>
 
   <h3>Work Experience</h3>
-  <table cellspacing="10">
+  <table cellspacing="12">
     <thead>
       <tr>
         <th>Dates</th>
